apps/base/mailu/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
  name: mailu
  namespace: mailu
spec:
  ingressClassName: traefik
  rules:
  - host: mail.k8s.nordgedanken.dev
    http:
      paths:
      - backend:
          service:
            name: mailu-front
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mail.k8s.nordgedanken.dev
    secretName: mailu-certificates
